--- a/html/WEB-INF/conf/authority.conf
+++ b/html/WEB-INF/conf/authority.conf
@@ -1,5 +1,5 @@
 # Authority name path list
 # Maps authority names to local paths
-Example ./metadata/Example
-SSA     ./metadata/SSA
-
+VMO	\Projects\spase\java\test\VMO
+SMWG	\Projects\spase\java\test\SMWG
+VMO/Granule	\Projects\spase\java\test\Granule
